--- a/ChromiumWPF/packages.config
+++ b/ChromiumWPF/packages.config
@@ -4,4 +4,5 @@
   <package id="cef.redist.x86" version="102.0.9" targetFramework="net472" />
   <package id="CefSharp.Common" version="102.0.90" targetFramework="net472" />
   <package id="CefSharp.Wpf" version="102.0.90" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
