added relevant values to App.config file

--- a/ChromiumWPF/App.config
+++ b/ChromiumWPF/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+  <appSettings>
+    <add key="layoutHtmlPath" value="file://C://msys64//home//ITAMARBI//WPF_Chromium//my-gst-webrtc//js//layout.html"/>
+    <add key="signallingServerUrl" value="https://192.168.136.152:8443"/>
+  </appSettings>
 </configuration>
