added config file urls to browsers

--- a/ChromiumWPF/App.config
+++ b/ChromiumWPF/App.config
@@ -5,7 +5,7 @@
     </startup>
 
   <appSettings>
-    <add key="layoutHtmlPath" value="file://C://msys64//home//ITAMARBI//WPF_Chromium//my-gst-webrtc//js//layout.html"/>
+    <add key="layoutHtmlPath" value="file:/C://Users//bendery//Desktop//WPF_Chromium//my-gst-webrtc//js/layout.html"/>
     <add key="signallingServerUrl" value="https://192.168.136.152:8443"/>
   </appSettings>
 </configuration>
