--- a/ChromiumWPF/ChromiumWPF.csproj
+++ b/ChromiumWPF/ChromiumWPF.csproj
@@ -53,6 +53,7 @@
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
